fix(ObjectPage): use UI5WC tabbar shadow (#7975)
The test was updated as previously the width reserved place for the
scrollbar, as the `::after` pseudo element was absolutely positioned,
had explicit width (`100%`) and was rendered in a container with
`overflow: auto`.

--- a/packages/main/src/components/ObjectPage/ObjectPage.module.css
+++ b/packages/main/src/components/ObjectPage/ObjectPage.module.css
@@ -105,21 +105,15 @@
   z-index: 4;
 }
 
+.tabContainerSpacer {
+  height: 3px;
+  background: var(--sapObjectHeader_Background);
+}
+
 .tabContainer {
   position: sticky;
   z-index: 3;
   background: var(--sapObjectHeader_Background);
-  padding-block-start: 3px;
-  &::after {
-    content: '';
-    pointer-events: none;
-    position: absolute;
-    height: 1px;
-    inset-block-end: -1px;
-    inset-inline-start: 0;
-    width: 100%;
-    box-shadow: var(--sapContent_HeaderShadow);
-  }
 }
 
 .tabContainerComponent {
@@ -130,7 +124,6 @@
   &::part(tabstrip) {
     padding: 0;
     padding-inline: var(--_ui5wcr_ObjectPage_tab_bar_inline_padding);
-    box-shadow: none;
   }
 }
 
